dev/paseo/relay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paseo-relay
  namespace: paseo
spec:
  selector:
    app: paseo-relay
  ports:
    - name: http
      port: 4000
      targetPort: http
