dev/paseo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paseo-web
  namespace: paseo
spec:
  selector:
    app: paseo-web
  ports:
    - name: http
      port: 80
      targetPort: http
